--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,3 +1,6 @@
 # Introduction
 
-Bus Rapid Transit (BRT) systems make use of traffic signal prioritization and preemption (TSP) to increase system reliability, or the consistency with which these systems maintain established schedules. Studies have been done to determine the effects of prioritization on reliability, but less has been done to evaluate the effectiveness of changes to TSP on headway distributions. The UVX BRT system is a fairly new transit network in Utah County. This system makes use of signal prioritization not to maintain a set schedule of arrivals and departures, but rather to achieve consistent headways, or times between the arrivals of buses. What are the effects of variable signal prioritization to the headway distribution of this fleet of buses? Can altering signal priority timing affect the distribution of headway times, leading to more uniformity in arrivals? I plan to use a dataset of UVX arrival data provided by Utah Transit Authority (UTA) to evaluate the effects of signal priority on headways. I will then perform statistical analyses on the dataset to verify what if any of these changes are significant in achieving improved distributions.
+The UVX BRT system is a fairly new transit network in Utah County. This system makes use of traffic signal prioritization (TSP) not to maintain a set schedule of arrivals and departures, but rather to achieve consistent headways, or times between the arrivals of buses. The use of TSP has been used for a variety of purposes, but the combination of TSP with metrics of headway deviation is a newer application of TSP. In 2019 the new UVX system provided its services under four separate TSP strategies throughout the year, including a five minute threshold for priority, a two minute threshold for priority, an unconditional priority, and no priority. Buses would be provided priority if they were running later than the threshold. The purpose of this report is to investigate the effectiveness of TSP strategies on headway distributions, so as to ascertain whether or not TSP can be used to improve the distributions and provide more consistent service.
+
+A brief review of literature will first be performed to recognize ways that TSP priority has been used to improve public transit services, particularly of BRT systems. A dataset provided by the Utah Transit Authority (UTA) of BRT timepoint data will then be cleaned, evaluated, and used to analyze the effects of TSP strategies on BRT headway distributions. After analysis is performed, conclusions and recommendations for future work will be provided.
+
